fix shots fired spacing

--- a/assets/css/style_topandbot.css
+++ b/assets/css/style_topandbot.css
@@ -195,7 +195,7 @@ font-weight: 900!important;
 }
 .head-last {
 
-    padding:5px 20px 200px 20px;
+    padding:5px 20px 150px 20px;
     color:#fff;
 }
 #home {
